# blackBird-ESP32-S3

./: .cproject  .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
components/JFS/: CMakeLists.txt
components/JFS/Config/: FS_Conf.h  FS_ConfigNOR_BM_PHY_ESP32_Espressif_ESP_WROVER_KIT.c
components/JFS/FS/: FS_CACHE_MultiWay.c  FS_CHARSET_CP437.c  FS_CHARSET_CP936.c  FS_CHARSET_CP949.c  FS_CHARSET_CP950.c  FS_ConfDefaults.h  FS_CopyFile.c  FS_Core.c  FS_CreateDir.c  FS_Debug.h  FS_ECC256.c  FS_FAT.h  FS_FAT_API.c  FS_FAT_DirEntry.c  FS_FAT_LFN.c  FS_FAT_Read.c  FS_FAT_VolumeLabel.c  FS_FAT_Write.c  FS_GetFileSize.c  FS_LogVolume.c  FS_MAP.c  FS_Move.c  FS_NOR_Drv.c  FS_NOR_ECC_SW_1Bit.c  FS_NOR_PHY_ESP32.h  FS_NOR_PHY_ST_M25.c  FS_PRNG.c  FS_RAMDisk.c  FS_Read.c  FS_SetEndOfFile.c  FS_Truncate.c  FS_Unmount.c  FS_Volume.c  FS_WinDrive.c
components/JFS/SEGGER/: SEGGER.h
components/JFS/Sample/Driver/NOR/: FS_ConfigNOR_BM_SPIFI_Octal_Template.c  FS_ConfigNOR_CFI_2x16.c  FS_ConfigNOR_PHY_Template.c  FS_ConfigNOR_SPI_Template.c  FS_NOR_HW_SFDP_Default.c  FS_NOR_HW_SPIFI_Octal_Template.c  FS_NOR_HW_SPI_DualQuad_Template.h  FS_NOR_PHY_Template.h
components/JFS/Sample/Driver/NOR/EnergyMicro_EFM32GG/: FS_ConfigNOR_BM_ST25_SPI_EFM32GG_EnergyMicro_EFR4D_STK6500.c  FS_NOR_PHY_EnergyMicro_EFM32GG.c
components/JFS/Sample/Driver/NOR/Freescale_K64/: FS_NOR_PHY_Freescale_K64.c  FS_NOR_PHY_Freescale_K64.h
components/JFS/Sample/Driver/NOR/Freescale_K66/: FS_ConfigNOR_BM_SFDP_K66_SEGGER_emPower.c  FS_PerformanceSimple.txt
components/JFS/Sample/Driver/NOR/GD_GD32F450/: FS_ConfigNOR_ST_M25_GD32F450_GD_GD32450i_EVAL.c  FS_PerformanceSimple.txt
components/JFS/Sample/Driver/NOR/Microchip_SAME54/: FS_PerformanceSimple.txt
components/JFS/Sample/Driver/NOR/NXP_LPC4322/: FS_NOR_HW_SPIFI_LPC4322_SEGGER_QSPIFI_Test_Board.c  FS_NOR_HW_SPIFI_LPC4322_SEGGER_QSPIFI_Test_Board.h  FS_NOR_HW_SPI_LPC4322_SEGGER_QSPIFI_Test_Board.c  FS_NOR_HW_SPI_LPC4322_SEGGER_QSPIFI_Test_Board.h
components/JFS/Sample/Driver/NOR/NXP_LPC4367/: FS_NOR_HW_SPIFI_LPC4367_NXP_LPCXpresso4367.h
components/JFS/Sample/Driver/NOR/NXP_LPC54608/: FS_NOR_HW_SPIFI_LPC54608_NXP_LPCXpresso54608.h  FS_PerformanceSimple.txt
components/JFS/Sample/Driver/NOR/NXP_iMXRT1052/: FS_PerformanceSimple.txt
components/JFS/Sample/Driver/NOR/NXP_iMXRT685/: FS_ConfigNOR_BM_SPIFI_iMXRT685_NXP_MIMXRT685_EVK.c  FS_NOR_HW_SPIFI_iMXRT685_NXP_MIMXRT685_EVK.c
components/JFS/Sample/Driver/NOR/NordicSemi_nRF52840/: FS_NOR_HW_SPIFI_nRF52840_NordicSemi_nRF52840_DK.c  FS_PerformanceSimple.txt
components/JFS/Sample/Driver/NOR/Renesas_RA6M3/: FS_PerformanceSimple.txt
components/JFS/Sample/Driver/NOR/Renesas_RA6M4/: FS_NOR_HW_SPIFI_R7FA6M4_Renesas_RA6M4_EK.h  FS_PerformanceSimple.txt
components/JFS/Sample/Driver/NOR/Renesas_RX62N/: FS_NOR_HW_SPI_RX62N_Renesas_RSKRX62N.c
components/JFS/Sample/Driver/NOR/Renesas_RX63N/: FS_NOR_HW_SPI_RX63N_Renesas_RSKRX63N.h
components/JFS/Sample/Driver/NOR/Renesas_RX64M/: FS_NOR_HW_SPI_RX64M_Renesas_RSKRX64M.h
components/JFS/Sample/Driver/NOR/Renesas_RX65N/: FS_NOR_HW_SPI_RX65N_Renesas_RSKRX65N.c  FS_NOR_HW_SPI_RX65N_Renesas_RSKRX65N_2MB.c
components/JFS/Sample/Driver/NOR/ST_STM32F207/: FS_NOR_PHY_ST_STM32F207.c
components/JFS/Sample/Driver/RAM/: FS_ConfigRAMDisk_23k.c
components/JFS/Sample/Driver/Template/: FS_ConfigTEMPLATE.c
components/JFS/Sample/Driver/WinDrive/: FS_ConfigWinDrive_Documents.c
main/: 195_Actor.c  195_Actor.h  BLE_Actor.c  CMakeLists.txt  ETH_Actor.c  ETH_Actor.h  EVENT_Actor.c  File_Manager_Actor.c  HTTP_Actor.c  IDLE_Actor.c  Kconfig  LED_Actor.c  NTP_Actor.c  NTP_Actor.syncworking  Pushbutton_Actor.c  SD_Card_Actor.c  SD_Card_Actor.h  SMTP_Actor.c  SPIFFS_Actor.c  SPIFFS_Actor.h  SYSTEM_Actor.c  System_Files_Actor.c  Tcp_Server_Actor.h  UART_Actor.c  WIFI_Actor.c  actor.h  cmd_decl.h  connect.c  console_actor.c  console_actor.h  device_config.h  iHub_Actor.c  led_strip_encoder.c  led_strip_encoder.h  main.c  products.json  pushbutton_Actor.h  script.js  script1.js  trimLightActor.h  (+4 more)
main/base64/: base64.c  base64.h
main/ble/: ble_comms_push.c  ble_comms_push.h  ble_security.c  ble_security.h  bsp.c  bsp.h  bsp_file.c  bsp_file.h  gatt_service.c  gatt_service.h  m225_methods.c  m225_methods.h  menu_builder.c  menu_builder.h  nxp_bridge.c  nxp_bridge.h
main/ble/ble_services/custom_services/: custom_serv.h
main/ble/ble_services/device_info/: device_info.h
main/protocol_examples_common/: connect.c
main/rtc/: i2cdev.c
(+364 files in other folders)
