idf_component_register(SRCS "JFS.c" 
                             "FS/FS_Misc.c" "FS/FS_Read.c" "FS/FS_FAT_LFN.c" "FS/FS_Write.c" "FS/FS_Dir.c" "FS/FS_Time.c" 
							 "FS/FS_GetFileSize.c" "FS/FS_Partition.c"
							 "FS/FS_Storage.c" "FS/FS_Volume.c" "FS/FS_Format.c" "FS/FS_Rename.c" "FS/FS_ErrorNo2Text.c" 
							 "FS/FS_CreateDir.c"
							 "FS/FS_LogBlock.c" "FS/FS_Attrib.c" "FS/FS_CACHE_All.c" "FS/FS_CACHE_Core.c" "FS/FS_CACHE_Man.c" 
							 "FS/FS_CACHE_MultiWay.c" "FS/FS_CACHE_RW.c"
							 "FS/FS_CACHE_RWQuota.c" "FS/FS_CHARSET_Unicode.c" "FS/FS_CLib.c" "FS/FS_ConfDefaults.h" "FS/FS_CopyFile.c" 
							 "FS/FS_Core.c" "FS/FS_CRC16.c" "FS/FS_CRC32.c" "FS/FS_CRC8.c" "FS/FS_Debug.c"
							 "FS/FS_DirOld.c" "FS/FS_DiskPartition.c" "FS/FS_ECC256.c" "FS/FS_FAT_Dir.c" "FS/FS_FAT_DirEntry.c" "FS/FS_FAT_DiskInfo.c" 
							 "FS/FS_FAT_Format.c" "FS/FS_FAT_FormatSD.c" "FS/FS_Journal.c"
							 "FS/FS_FAT_Int.h" "FS/FS_FAT_LFN.c" "FS/FS_FAT_Misc.c" "FS/FS_FAT_Move.c" "FS/FS_FAT_Open.c" 
							 "FS/FS_FAT_Read.c" "FS/FS_FAT_Rename.c" "FS/FS_FAT_Write.c" 
							 "FS/FS_FAT_SetEndOfFile.c" "FS/FS_SetEndOfFile.c"
#							 "FS/FS_Truncate.c"  "FS/FS_Write.c"
							 "FS/FS_OS_Interface.c" "FS/FS_CHARSET_CP437.c" "FS/FS_CHARSET_CP932.c" "FS/FS_CHARSET_CP950.c" 
							 "FS/FS_CHARSET_CP936.c" "FS/FS_CHARSET_CP949.c"  "FS/FS_Unmount.c" "FS/FS_Time.c" "FS/FS_SYSVIEW.c" 
							 "FS/FS_Storage.c" "FS/FS_NOR_PHY_ESP32.c" "FS/FS_NOR_BM_Drv.c"
							 "Config/FS_ConfigIO.c" "Config/FS_ConfigNOR_BM_PHY_ESP32_Espressif_ESP_WROVER_KIT.c"
							 "SEGGER/SEGGER_snprintf.c"
							 "Sample/OS/FS_OS_FreeRTOS.c"
				    REQUIRES "esp_partition" "bootloader_support" "spi_flash"
                    INCLUDE_DIRS "include" "Config" "FS" "Sample/Driver/NOR" "Sample/OS" "SEGGER")
                   

